@@ -1,5 +1,6 @@
 #include "EventFilter/Utilities/interface/Exception.h"
 #include "EventFilter/Modules/interface/ShmOutputModuleRegistry.h"
+#include "EventFilter/Modules/src/FUShmOutputModule.h"
 
 #include "TriggerReportHelpers.h"
 #include "FWCore/Framework/interface/TriggerReport.h"
@@ -372,7 +373,6 @@ void TriggerReportHelpers::packTriggerReport(edm::TriggerReport &tr,
       trp->trigPathSummaries[i].timesExcept = 
 	tr.trigPathSummaries[i].timesExcept - trp_.trigPathSummaries[i].timesExcept;
     }
-
   for(int i = 0; i < trp->endPathsInMenu; i++)
     {
       unsigned int j = i + trp->trigPathsInMenu;
@@ -414,6 +414,24 @@ void TriggerReportHelpers::packTriggerReport(edm::TriggerReport &tr,
 	trp->endPathSummaries[i].timesPassedPs = trp->endPathSummaries[i].timesRun;
       }
     }
+  //dataset statistics
+  if (sor) {
+    std::vector<edm::FUShmOutputModule *> & shmOutputsWithDatasets_ = sor->getShmOutputModulesWithDatasets();
+    unsigned int datasetIndex = 0;
+    for (unsigned int i=0;i<shmOutputsWithDatasets_.size();i++)
+    {
+      std::vector<unsigned int> & outputCounters = shmOutputsWithDatasets_[i]->getDatasetCounts();
+      for (unsigned int j=0;j<outputCounters.size();j++)
+      {
+        if (j>=max_datasets) continue;
+        trp->datasetSummaries[datasetIndex].timesPassed=outputCounters[j];
+        datasetIndex++;
+      }
+      shmOutputsWithDatasets_[i]->clearDatasetCounts();
+    }
+    trp->datasetsInMenu=datasetIndex;
+  }
+
   trp_ = tr;
   for(int i = 0; i < trp->endPathsInMenu; i++)
     {
@@ -455,6 +473,16 @@ void TriggerReportHelpers::sumAndPackTriggerReport(MsgBuf &buf)
       std::ostringstream ost;
       ost << "trig endpath summary inconsistency " 
 	  << trs->endPathsInMenu << " vs. " << trp->endPathsInMenu;
+      std::cout << ost.str() << std::endl;
+      XCEPT_RAISE(evf::Exception,ost.str());
+    }
+  //init dataset sizes if 0
+  if (!trs->datasetsInMenu) trs->datasetsInMenu = trp->datasetsInMenu;
+  if(trs->datasetsInMenu != trp->datasetsInMenu)
+    {
+      std::ostringstream ost;
+      ost << "output module dataset summary inconsistency " 
+	  << trs->datasetsInMenu << " vs. " << trp->datasetsInMenu;
       std::cout << ost.str() << std::endl;
       XCEPT_RAISE(evf::Exception,ost.str());
     }
