@@ -1,3 +1,8 @@
+2012-09-02 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V02-05-21
+	* dataset stat reporting
+
 2012-08-28 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V02-05-20
